--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "sequelize": "^6.21.4"
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   }
 }
